--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Welcome to VORTEX</h1>
-          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+          <h2>We are a team of 6 members who have successfully created a portal for all the exprets and daily users to understand the intensity of the cyclone that might occur in the Indian Ocean.</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#intensity" class="btn-get-started scrollto">Get Started</a>
           </div>
