minor changes in UI

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       <div class="container-fluid" data-aos="fade-up">
 
         <div class="row">
-
-          <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
+        <div class="col-lg-1"></div>
+          <div class="col-lg-3 ">
 
             <div class="content">
               <h3>Cyclone <strong>Intensity</strong></h3>
@@ -93,8 +93,9 @@
             </div>
 
           </div>
-
-          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/why-us.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
+          <div class="col-lg-2"></div>
+          <div class="col-lg-4 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/why-us.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
+          <div class="col-lg-1"></div>
         </div>
 
       </div>
@@ -103,8 +104,8 @@
       <div class="container-fluid" data-aos="fade-up">
 
         <div class="row">
-
-          <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
+        <div class="col-lg-1"></div>
+          <div class="col-lg-3">
 
             <div class="content">
               <h3>Cyclone <strong>detection</strong></h3>
@@ -118,8 +119,9 @@
             </div>
 
           </div>
-
-          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/why-us.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
+          <div class="col-lg-2"></div>
+          <div class="col-lg-4 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/why-us.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
+          <div class="col-lg-1"></div>
         </div>
 
       </div>
