--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li>
               <a class="nav-link scrollto" href="#detection"
-                >detection Estimator</a
+                >Detection Estimator</a
               >
             </li>
             <li>
@@ -134,7 +134,7 @@
 
             <div
               class="col-lg-5 align-items-stretch order-1 order-lg-2 img"
-              style="background-image: url('assets/img/why-us.png')"
+              style="background-image: url('assets/img/Cyclone_Detected.png')"
               data-aos="zoom-in"
               data-aos-delay="150"
             >
@@ -171,7 +171,7 @@
 
             <div
               class="col-lg-5 align-items-stretch order-1 order-lg-2 img"
-              style="background-image: url('assets/img/why-us.png')"
+              style="background-image: url('assets/img/Intensity_Estimation.png')"
               data-aos="zoom-in"
               data-aos-delay="150"
             >
