--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li>
               <a class="nav-link scrollto" href="#detection"
-                >Detection Estimator</a
+                >Intensity Estimator</a
               >
             </li>
             <li>
@@ -62,7 +62,7 @@
               >
             </li>
             <li>
-              <a class="nav-link scrollto" href="#team">Team Information</a>
+              <a class="nav-link scrollto" href="#team">About Me!</a>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -83,7 +83,7 @@
           >
             <h1>Welcome to VORTEX</h1>
             <h2>
-              We are a team of 6 members who have successfully created a portal
+              VORTEX is a portal
               for all the exprets and daily users to understand the detection of
               the cyclone that might occur in the Indian Ocean.
             </h2>
