Update Website details

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               >
             </li>
             <li>
-              <a class="nav-link scrollto" href="#team">About Me!</a>
+              <a class="nav-link scrollto" href="#team">About Us!</a>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -84,8 +84,8 @@
             <h1>Welcome to VORTEX</h1>
             <h2>
               VORTEX is a portal
-              for all the exprets and daily users to understand the detection of
-              the cyclone that might occur in the Indian Ocean.
+              for both experts and daily users to check and understand the meteorological conditions of the
+              Water Bodies surrounding the Indian Subcontinent. <br><br>It is focused on the detection and intensity estimation of Cyclones that form over the Bay of Bengal, the Arabian Sea and the Indian Ocean.
             </h2>
             <div class="d-flex justify-content-center justify-content-lg-start">
               <a href="#detection" class="btn-get-started scrollto"
@@ -207,8 +207,8 @@
                 data-aos-delay="100"
               >
                 <div class="member-info">
-                  <h4>Indrashish Paul</h4>
-                  <span>Lead</span>
+                  <h4>Indrashis Paul</h4>
+                  <span>Lead | ML and Backend Developer</span>
                   <p>19MIM10046</p>
                 </div>
               </div>
@@ -222,62 +222,8 @@
               >
                 <div class="member-info">
                   <h4>Raghav Agarwal</h4>
-                  <span>Member|model development</span>
+                  <span>Member| Data and Model Training</span>
                   <p>19MIM10024</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-6 mt-4">
-              <div
-                class="member d-flex align-items-start"
-                data-aos="zoom-in"
-                data-aos-delay="300"
-              >
-                <div class="member-info">
-                  <h4>Om Rajani</h4>
-                  <span>Member|model development</span>
-                  <p>19MIM10099</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-6 mt-4">
-              <div
-                class="member d-flex align-items-start"
-                data-aos="zoom-in"
-                data-aos-delay="400"
-              >
-                <div class="member-info">
-                  <h4>Soumya Rajadhyaksha</h4>
-                  <span>Member|web development</span>
-                  <p>19BAI10120</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 mt-4">
-              <div
-                class="member d-flex align-items-start"
-                data-aos="zoom-in"
-                data-aos-delay="400"
-              >
-                <div class="member-info">
-                  <h4>Anfaas Qureshi</h4>
-                  <span>Member|web development</span>
-                  <p>19BCG10017</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 mt-4">
-              <div
-                class="member d-flex align-items-start"
-                data-aos="zoom-in"
-                data-aos-delay="400"
-              >
-                <div class="member-info">
-                  <h4>Kshitij Singh Chouhan</h4>
-                  <span>Member|model development</span>
-                  <p>19MIM10088</p>
                 </div>
               </div>
             </div>
